# batch-processing-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: composition.py  main.py
app/api/: dependencies.py  middleware.py
app/api/routers/: jobs.py
app/core/: config.py  exceptions.py  logging.py  metrics.py  observability.py
app/domain/: enums.py  models.py  results.py
app/engine/: batch_engine.py  concurrency.py  retry.py  worker.py
app/infrastructure/db/: models.py  session.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/migrations/versions/: 0001_initial.py
app/infrastructure/db/repositories/: job_repository.py  work_queue_repository.py
app/infrastructure/inference/: factory.py  mock_client.py  openai_client.py
app/infrastructure/storage/: factory.py  local_storage.py  s3_storage.py
app/interfaces/: inference_client.py  repositories.py  storage_backend.py  validation.py
app/services/: ingestor.py  job_service.py
app/services/validation/: pipeline.py  rules.py
app/utils/: cost.py  tokens.py
docker/: entrypoint.sh  prometheus.yml
docs/: Batch_Eval_Engine_Design.docx
docs/diagrams/: 01_architecture_flow.mmd  02_worker_detail.mmd  03_backpressure_sequence.mmd  04_component_diagram.mmd  05_item_state.mmd  06_class_uml.mmd
scripts/: api_demo.sh  build_doc.py  demo_stack.sh  generate_sample_batch.py  render_diagrams.py  run_live.py  smoke_e2e.py
tests/: conftest.py
tests/integration/: conftest.py  test_live_inference.py  test_pipeline.py  test_work_queue.py
tests/unit/: test_concurrency.py  test_retry.py  test_validation.py
workers/: run_worker.py
